--- a/src/styles/components/global/NavBar.scss
+++ b/src/styles/components/global/NavBar.scss
@@ -1,3 +1,12 @@
 .NavBar {
-  
+  position: fixed;
+  top: 0%;
+  > .hide_nav {
+    right: -100%;
+  }
+  > .show_nav {
+    background-color: rgba(0,0,0, .8);
+    right: 0%;
+  }
+
 }
