setting up scss, images, mixins, and footer/navbar

--- a/src/styles/components/global/NavBar.scss
+++ b/src/styles/components/global/NavBar.scss
@@ -1,12 +1,42 @@
 .NavBar {
-  position: fixed;
-  top: 0%;
-  > .hide_nav {
-    right: -100%;
+  font-size: 30px;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  .hamburger {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    color: white;
   }
-  > .show_nav {
-    background-color: rgba(0,0,0, .8);
-    right: 0%;
+  .nav-wrapper {
+    transition: all .3s;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, .8);
+    > .nav-items {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      transform: translateY(-50%);
+      > .nav-item {
+        padding: 20px 0px;
+        > a {
+          text-decoration: none;
+          color: whitesmoke;
+        }
+      }
+    }
+  }
+  .hide-nav {
+    left: 100%;
+  }
+  .show-nav {
+    left: 0%;
   }
 
 }
