--- a/src/styles/components/global/NavBar.scss
+++ b/src/styles/components/global/NavBar.scss
@@ -1,22 +1,22 @@
 .NavBar {
   font-size: 30px;
-  height: 100%;
-  width: 100%;
   position: absolute;
   .hamburger {
     position: fixed;
     top: 10px;
     right: 10px;
     color: white;
+    z-index: 10;
   }
   .nav-wrapper {
+    z-index: 1;
     transition: all .3s;
     height: 100%;
     width: 100%;
     position: fixed;
     top: 0%;
     text-align: center;
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .9);
     > .nav-items {
       position: absolute;
       top: 50%;
